
syntax = "proto3";

package models;

import "vehicle.proto";
import "bicycle.proto";
import "tricycle.proto";
import "pedestrian.proto";
import "face.proto";
import "common.proto";
import "insert.proto";


message ExternalData {
    // TODO
}

// ## Business Intelligence APIs
service SpringService {
    // ### Index APIs

    // Index stores generic entity.
    // Errors:
    //   40301: Invalid entity.
    rpc Index(GenericObj) returns (NullMessage) {}

    // IndexBatch stores generic entities.
    // Errors:
    //   40301: Invalid entity.
    rpc IndexBatch(GenericObjs) returns (NullMessage) {}

    // IndexVehicle stores vehicle entity.
    // Errors:
    //   40301: Invalid entity.
    rpc IndexVehicle(Vehicle) returns (NullMessage) {}

    // IndexBatchVehicle stores batch vehicle entities.
    // Errors:
    //   40301: Invalid entity.
    rpc IndexBatchVehicle(Vehicles) returns (NullMessage) {}

    // IndexBicycle stores bicycle entity.
    // Errors:
    //   40301: Invalid entity.
    rpc IndexBicycle(Bicycle) returns (NullMessage) {}

    // IndexBatchBicycle stores batch bicycle entities.
    // Errors:
    //   40301: Invalid entity.
    rpc IndexBatchBicycle(Bicycles) returns (NullMessage) {}

    // IndexTricycle stores tricycle entity.
    // Errors:
    //   40301: Invalid entity.
    rpc IndexTricycle(Tricycle) returns (NullMessage) {}

    // IndexBatchTricycle stores batch tricycle entities.
    // Errors:
    //   40301: Invalid entity.
    rpc IndexBatchTricycle(Tricycles) returns (NullMessage) {}

    // IndexPedestrian stores pedestrian entity.
    // Errors:
    //   40301: Invalid entity.
    rpc IndexPedestrian(Pedestrian) returns (NullMessage) {}

    // IndexBatchPedestrian stores batch pedestrian entities.
    // Errors:
    //   40301: Invalid entity.
    rpc IndexBatchPedestrian(Pedestrians) returns (NullMessage) {}

    // IndexFace stores face entity.
    // Errors:
    //   40301: Invalid entity.
    rpc IndexFace(Face) returns (NullMessage) {}

    // IndexBatchFace stores batch face entities.
    // Errors:
    //   40301: Invalid entity.
    rpc IndexBatchFace(Faces) returns (NullMessage) {}

    // ImportExternalData imports external data like DMV's data.
    // Errors:
    //   40304: Invalid external data.
    rpc ImportExternalData(ExternalData) returns (NullMessage) {}
}